# exercise_interface_client

./: CMakeLists.txt  README.md  package.xml
data/: 8629.corpus  8629.dic  8629.lm  8629.log_pronounce  8629.sent  8629.vocab
data/old/: 1614.corpus
include/: master_interface.h  ui_components.h
launch/: interface_client.launch
src/: main.cpp  master_interface.cpp  state_listener_main.cpp
