<?xml version="1.0"?>
<package>
  <name>exercise_interface_client</name>
  <version>0.0.0</version>
  <description>The exercise_interface_client package</description>

  <maintainer email="yuanliang.meng@gmail.com">Yuanliang Meng</maintainer>

  <author>Yuanliang Meng</author>
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>qt_build</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>libqt4-dev</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nao_msgs</build_depend>
  <build_depend>rqt_gui</build_depend>
  <build_depend>rqt_gui_cpp</build_depend>
  <build_depend>rqt_gui_py</build_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>myo_raw</build_depend>
  
  <run_depend>myo_raw</run_depend>
  <run_depend>rosbag</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_cpp</run_depend>
  <run_depend>rqt_gui_py</run_depend>
  <run_depend>qt_build</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>libqt4-dev</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>nao_msgs</run_depend>

</package>
